# paperless-webdav

./: .env.example  .gitignore  .woodpecker.yml  CHANGELOG.md  Caddyfile  Dockerfile  Makefile  README.md  alembic.ini  cog.toml  docker-compose.yml  pyproject.toml
.githooks/: pre-commit
.woodpecker/: woodpecker-template.yaml
alembic/: env.py
alembic/versions/: 001_initial.py  002_remove_read_only.py
caddy/: Caddyfile.custom-certs  Caddyfile.letsencrypt
docs/plans/: 2026-01-24-admin-ui-design.md  2026-01-24-admin-ui-plan.md  2026-01-24-implementation-plan.md  2026-01-24-paperless-webdav-design.md  2026-01-24-webdav-oidc-completion-plan.md
k8s/: database.yaml  deployment.yaml  ingress.yaml  namespace.yaml  rbac.yaml  secret.yaml
scripts/: entrypoint.py
src/paperless_webdav/: __init__.py  app.py  async_bridge.py  cache.py  config.py  database.py  dependencies.py  encryption.py  logging.py  main.py  models.py  paperless_client.py  schemas.py  webdav_auth.py  webdav_provider.py  webdav_server.py
src/paperless_webdav/api/: health.py  shares.py  tags.py
src/paperless_webdav/auth/: __init__.py  oidc.py  paperless.py
src/paperless_webdav/services/: __init__.py  shares.py
src/paperless_webdav/ui/: __init__.py  routes.py
src/paperless_webdav/ui/templates/: base.html  login.html  token_setup.html
src/paperless_webdav/ui/templates/partials/: tag_suggestions.html  user_suggestions.html
src/paperless_webdav/ui/templates/shares/: form.html  list.html
tests/: __init__.py  conftest.py  test_api_shares.py  test_api_tags.py  test_app.py  test_async_bridge.py  test_auth_oidc.py  test_auth_paperless.py  test_encryption.py  test_logging.py  test_main.py  test_migrations.py  test_models.py  test_paperless_client.py  test_services_shares.py  test_ui_routes.py  test_webdav_auth.py  test_webdav_provider.py  test_webdav_server.py
